--- a/style.css
+++ b/style.css
@@ -1,41 +1,75 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
+
+body{
+  width: 100%;
+  height: 100%;
+  margin-top: -50px;
+  margin-left: 0;
+  margin-right: 0;
+}
 header{
+  background: url(img/header.jpg) center no-repeat;
+  height: 628px;
+  -moz-background-size: 100%; /* Firefox 3.6+ */
+  -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
+  -o-background-size: 100%; /* Opera 9.6+ */
+  background-size: 100%;
+  background-image: url("img/header-img.png");
+}
+/*header{
   display: block;
-  width: 1600px;
+  width: 100%;
   height: 628px;
   background-image: url("img/header-img.png");
   background-color: rgba(47, 128, 237, 0.5);
   position: relative;
-}
+   
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}*/
 
 .attractie, .attractie2{
  width: 209px;
  height: 50px;
- padding-top: 15px;
- padding-left: 215px;
+ padding-top: 40px;
+ padding-left: 165px;
  font-family: "Montserrat";
  font-style: medium;
  font-size: 21px;
  height: 26px;
  color: white;
-
+}
+.attractie h3{
+  font-weight: 300;
 }
 .slogan{
  width: 800px;
  height: 110px;
  position: absolute;
- padding-top: 120px; 
- padding-left: 215px;
+ padding-top: 45px; 
+ padding-left: 180px;
  font-family: "Open Sans";
- font-size: 44px;
+ font-size: 40px;
  color: white;
+ letter-spacing: 1px;
+}
+
+.slogan-light{
+  font-weight: 300;
+}
+
+.slogan > .slogan-light{
+  margin-top: -35px;
 }
 .fb-icon{
-margin: -25px;
-padding-left: 1321px;
+margin: 25px;
+padding-left: 69em;
 }
 .tw-icon{
- margin: -25px;
- padding-left: 1361px;
+ margin-top: -48px;
+ padding-left: 73em;
  }
  .button1, .button2{
    width:282px;
@@ -46,16 +80,16 @@ padding-left: 1321px;
    color: #2F80ED;
    background-color: white;
    border-radius: 157px;
+   border: none;
  }
 
  .button1{
-  margin-top: 384px;
-  margin-left: 218px;
+  margin-top: 13.5em;
+  margin-left: 10em;
  }
  main{
-  width: 1600px;
-  height: 592px; 
-  padding-left: 218px;
+  height: 572px; 
+  padding-left: 185px;
  }
 
  .second-slogan{
@@ -66,9 +100,11 @@ padding-left: 1321px;
    font-family: "Open Sans";
    font-size: 44px;
  }
-
+.second-slogan > .slogan-light{
+  margin-top: -35px;
+}
 .conz-img, .pizza-img, .shop-img{
-  margin-top: 150px;
+  margin-top: 120px;
 } 
 
 .conz-text, .pizza-text, .shop-text{
@@ -89,7 +125,6 @@ padding-left: 1321px;
 }
 
 footer{
-  width: 1600px ;
   height: 1030px;
   background: linear-gradient(to right, #2F80ED 0%, #17345C 98.9%)
 }
@@ -99,18 +134,29 @@ footer{
   height: 424px;
   font-size: 20px;
   font-family: "Open Sans";
-  color: white;
+  color: #FFFFFF;
   padding-top: 133px;
-  
-}
-.border-div{
-  width: 1170px;
-  height: 710px;
-  margin: 0 215px;
-  border-bottom: solid 1px rgba(255, 255, 255, 0.2);
-  
 }
 
+.footer-text > .slogan-light{
+  font-size: 18px;
+}
+
+.slogan-light2{
+  font-size: 44px;
+  margin-top: -15px;
+  font-weight: 300;
+}
+.border-div{
+  width: 1000px;
+  height: 710px;
+  margin-left: 185px;
+  border-bottom: solid 1px rgba(255, 255, 255, 0.2);
+}
+
+.button2{
+  margin-top: 30px;
+}
 .dialog{
   width: 350px;
   height: 550px;
@@ -118,12 +164,13 @@ footer{
   float: right;
   position: relative;
   margin-top: -480px;
+  
 }
 
 .circle{
   width: 30px;
   height: 30px;
-  background-color: white;
+  background-color: #FFFFFF;
   border-radius: 50px;
   margin-top: 110px;
   text-align: center;
@@ -244,21 +291,28 @@ footer{
 
 .attractie2{
   padding-top: 30px;
+  padding-left: 188px;
+}
+.social a, .navigation a{
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.7);
 }
 
 .social, .navigation{
   width: 200px;
   height: 25px;
   font-family: "Open Sans";
-  font-size: 18px;
-  color: rgba(255, 255, 255, 0.7);
+  font-size: 18px; 
   float: right;
   margin-top: -20px;
   text-align: right;
+  
 }
-
+.social > a{
+  text-decoration: none;
+}
 .navigation{
-  margin-right: 215px;
+  margin-right: 165px;
 }
 
 .social h4, .navigation h4{
@@ -272,5 +326,5 @@ color: #FFFFFF;
   color: rgba(255, 255, 255, 0.7);
   float: left;
   margin-top: 180px;
-  margin-left: 215px;
+  margin-left: 190px;
 }
